--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.6"
+    "@astrojs/solid-js": "^5.1.3",
+    "@tailwindcss/vite": "^4.1.17",
+    "astro": "^5.15.6",
+    "solid-devtools": "^0.34.4",
+    "solid-js": "^1.9.10",
+    "tailwindcss": "^4.1.17"
   }
 }
