--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/solid-js": "^5.1.3",
+    "@sentry/astro": "^10.25.0",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.15.6",
     "solid-devtools": "^0.34.4",
