--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "ethicaltech",
-  "type": "module",
   "version": "0.0.1",
+  "dependencies": {
+    "@astrojs/react": "^4.4.2",
+    "@sentry/astro": "^10.25.0",
+    "@tailwindcss/vite": "^4.1.17",
+    "astro": "^5.15.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.17",
+    "vite-plugin-svgr": "^4.5.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-    "@astrojs/solid-js": "^5.1.3",
-    "@sentry/astro": "^10.25.0",
-    "@tailwindcss/vite": "^4.1.17",
-    "astro": "^5.15.6",
-    "solid-devtools": "^0.34.4",
-    "solid-js": "^1.9.10",
-    "tailwindcss": "^4.1.17"
-  }
+  "type": "module"
 }
